--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/BoatPrototype.jar
+dist.jar=${dist.dir}/PSCsailingclub.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/BoatPrototype
+dist.jlink.output=${dist.jlink.dir}/PSCsailingclub
 excludes=
 file.reference.mysql-connector-java-8.0.27.jar=mysql-connector-java-8.0.27.jar
 includes=**
@@ -75,7 +75,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=BoatPrototype
+jlink.launcher.name=PSCsailingclub
 main.class=boatprototype.BoatPrototype
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
